Fix: Responsiveness of website sections on smaller screens (#301)

--- a/index.css
+++ b/index.css
@@ -1812,7 +1812,8 @@ footer .copyright {
 
   .greeting {
     position: relative;
-    right: 2rem;
+    right: 2px;
+    text-align: center;
   }
 
   .about-flex {
